--- a/src/app/components/examples/settings/echarts-line-chart-settings.component.html
+++ b/src/app/components/examples/settings/echarts-line-chart-settings.component.html
@@ -139,6 +139,16 @@
               <span class="slider"></span>
             </label>
           </div>
+          <div class="toggle-row">
+            <label class="toggle-label">
+              <span>Device Type Filtering</span>
+              <span class="setting-hint">Filter measurements based on device type (3D/6D sensors)</span>
+            </label>
+            <label class="apple-switch">
+              <input type="checkbox" formControlName="deviceTypeFiltering">
+              <span class="slider"></span>
+            </label>
+          </div>
         </div>
       </div>
     </div>
